src/test/ui/cross/cross-file-errors/main.stderr
error[E0282]: type annotations needed
  --> $DIR/underscore.rs:8:9
   |
LL |         _
   |         ^ cannot infer type
   | 
  ::: $DIR/main.rs:5:5
   |
LL |     underscore!();
   |     -------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
